Fix emoji rendering by adding UTF-8 charset

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Hello DevOps</title>
+</head>
+<body>
+    Hello DevOps 🚀
+</body>
+</html>
 <h1>Hello DevOps 🚀</h1>
